cambio thema e backend degli utenti

--- a/xin-magazine-fotonicamente/css/fotonicamente.css
+++ b/xin-magazine-fotonicamente/css/fotonicamente.css
@@ -2,10 +2,9 @@
 .top-bar .name h3 > a {
     font-weight: bold;
     color: white;
-    
+
     padding: 0px 15px;
 }
-
 
 .widget-title {
     font-size: 1.0em;
@@ -17,19 +16,100 @@
 }
 
 #footer-widget-area {
-     font-size: 0.8em;
-	 background: none repeat scroll 0% 0% #ccc;
-	 }
-	 
-	 
-p {font-family: inherit;font-weight: normal;font-size: 0.9em;line-height: 1.6;margin-bottom: 1.25em;text-rendering: optimizelegibility;}
-ul li ul, ul li ol {font-size: 0.9em;}
- 
-button, .button {border-style: solid;border-width: 1px;cursor: pointer;font-family: inherit;font-weight: bold;line-height: 1;margin: 0px 0px 1.0em;position: relative;text-decoration: none;text-align: center;display: inline-block;padding: 0.75em 1.5em 0.8125em;font-size: 1em;background-color:#870303 ;border-color: rgb(34, 132, 161);color: white;}
+    font-size: 0.8em;
+    background: none repeat scroll 0% 0% #ccc;
+}
 
+p {
+    font-family: inherit;
+    font-weight: normal;
+    font-size: 0.9em;
+    line-height: 1.6;
+    margin-bottom: 1.25em;
+    text-rendering: optimizelegibility;
+}
 
-.top-bar-menu.right{color:#870303}
+ul li ul, ul li ol {
+    font-size: 0.9em;
+}
+
+button, .button {
+    border-style: solid;
+    border-width: 1px;
+    cursor: pointer;
+    font-family: inherit;
+    font-weight: bold;
+    line-height: 1;
+    margin: 0px 0px 1.0em;
+    position: relative;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    padding: 0.75em 1.5em 0.8125em;
+    font-size: 1em;
+    background-color: #870303;
+    border-color: rgb(34, 132, 161);
+    color: white;
+}
+
+.top-bar-menu.right {
+    color: #870303
+}
+
 a {
     color: #530101;
 }
-img, object, embed {max-width: 100%;height: auto;}
+
+img, object, embed {
+    max-width: 100%;
+    height: auto;
+}
+
+
+.top-bar-section .bp-logout-nav a {
+    background-color: #870303 !important;
+}
+
+.top-bar-section .bp-login-nav a {
+    background-color: #870303 !important;
+}
+
+#buddypress div#item-nav .item-list-tabs ul li {
+   float: none;
+}
+
+#buddypress div#item-header {
+}
+
+#buddypress div#item-nav {
+   position: absolute;
+   float: left;
+   width: 155px;
+   border-right: 1px solid #870303;
+
+}
+
+
+#buddypress div#item-body {
+   position: relative;
+   margin-left: 155px;
+
+}
+
+#buddypress div#subnav.item-list-tabs{
+  margin-top: 0px;
+}
+
+#buddypress div#subnav {
+   /* border-bottom: 1px solid #870303; */
+   padding: 0px;
+   margin: 0px;
+}
+
+#buddypress div.item-list-tabs ul li.selected a,
+#buddypress div.item-list-tabs ul li.current a {
+    background-color: #870303;
+    color: #efefef;
+    font-weight: bold;
+    opacity: 0.8;
+}
